Styling & optional historical for heating meter

--- a/Energy.App.Standalone/Features/Analysis/CurrentPeriodAnalysisCard.razor
+++ b/Energy.App.Standalone/Features/Analysis/CurrentPeriodAnalysisCard.razor
@@ -95,7 +95,7 @@
         _highlightToggled = AnalysisOptionsState.Value[MeterType].ToggleSource == ToggleSource.Current;
     }
 
-    private async Task ToggleHighlight(bool toggled)
+    private void ToggleHighlight(bool toggled)
     {
         if (toggled)
         {
