--- a/Energy.App.Standalone/Features/Setup/Meter/Pages/AddElectricityMeter.razor
+++ b/Energy.App.Standalone/Features/Setup/Meter/Pages/AddElectricityMeter.razor
@@ -112,7 +112,7 @@
 
 
 
-    private async Task HandleValidSubmit()
+    private void HandleValidSubmit()
     {
         if (_addingNotUpdating)
         {
